--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run My Download Action
-        uses: ./ # Path to your action
+        uses: ../action.yml
         with:
           command: 'echo "Executing command with parameters"'
           basic_parameters: '{"param1":"value1","param2":"value2"}'
