--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,48 +1,50 @@
-#name: Example Workflow
-#
-#on:
-#  push:
-#    branches:
-#      - main
-#
-#jobs:
-#  run-download-action:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v2
-#
-#      - name: echo
-#        uses: ./
-#        with:
-#          command: 'echo "Executing command with parameters"'
-#
-#
-#      - name: Run My Download Action
-#        uses: ./
-#        with:
-#          command: 'run'
-#          basic_parameters: '{"param1":"value1","param2":"value2"}'
-#          command_parameters: '{"paramA":"valueA","paramB":"valueB"}'
+name: Example Workflow
 
-
-
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  hello_world_job:
+  run-download-action:
     runs-on: ubuntu-latest
-    name: A job to say hello
     steps:
-      # To use this repository's private action,
-      # you must check out the repository
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Hello world action step
-        uses: ./ # Uses an action in the root directory
-        id: hello
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: echo
+        uses: ./
         with:
-          who-to-greet: 'Mona the Octocat'
-      # Use the output from the `hello` step
-      - name: Get the output time
-        run: echo "The time was ${{ steps.hello.outputs.time }}"
+          command: 'echo "Executing command with parameters"'
+
+
+      - name: Run My Download Action
+        uses: ./
+        with:
+          command: 'run'
+          basic_parameters: '{"param1":"value1","param2":"value2"}'
+          command_parameters: '{"paramA":"valueA","paramB":"valueB"}'
+
+
+#
+#on: [push]
+#
+#jobs:
+#  hello_world_job:
+#    runs-on: ubuntu-latest
+#    name: A job to say hello
+#    steps:
+#      # To use this repository's private action,
+#      # you must check out the repository
+#      - name: Checkout
+#        uses: actions/checkout@v4
+#      - name: Hello world action step
+#        uses: ./ # Uses an action in the root directory
+#        id: hello
+#        with:
+#          who-to-greet: 'Mona the Octocat'
+#      # Use the output from the `hello` step
+#      - name: Get the output time
+#        run: echo "The time was ${{ steps.hello.outputs.time }}"
+#
+#
