remove unnecessary logs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,12 +16,11 @@ jobs:
         uses: ./
         with:
           command: 'echo "Executing command with parameters"'
-        run: test this for me
+        run: provengo create .new/test2
 
 
       - name: Run My Download Action
         uses: ./
-        run: provengo run ../test
         with:
           command: 'run'
           basic_parameters: '{"param1":"value1","param2":"value2"}'
