--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           command: 'echo "Executing command with parameters"'
 
       - name: create new provengo program
-        run: provengo create ./new/test
+        run: provengo --batch create ./new/test
 
       - name: run my new project
         run: provengo run ./new/test
